crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_raster_images__remove_raster_images-2.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_raster_images.rs
expression: "test_config(r#\"{ \"removeRasterImages\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n    <g>\n        <image xlink:href=\"data:image/jpg;base64,...\" width=\"100\" height=\"100\"/>\n        <image xlink:href=\"data:image/png;base64,...\" width=\"100\" height=\"100\"/>\n        <image xlink:href=\"data:image/gif;base64,...\" width=\"100\" height=\"100\"/>\n        <image xlink:href=\"data:image/svg+xml;base64,...\" width=\"100\" height=\"100\"/>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
    <g>
        <image xlink:href="data:image/svg+xml;base64,..." width="100" height="100"/>
    </g>
</svg>
