crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_raster_images__remove_raster_images.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_raster_images.rs
expression: "test_config(r#\"{ \"removeRasterImages\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n    <g>\n        <image xlink:href=\"raster.jpg\" width=\"100\" height=\"100\"/>\n        <image xlink:href=\"raster.png\" width=\"100\" height=\"100\"/>\n        <image xlink:href=\"raster.gif\" width=\"100\" height=\"100\"/>\n        <image xlink:href=\"raster.svg\" width=\"100\" height=\"100\"/>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <g>
        <image xlink:href="raster.svg" width="100" height="100"/>
    </g>
</svg>
